--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ log = "0.4"
 semver = {version = "0.9.0", features = ["serde"] }
 serde =  { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+url = {version = "2.1.0", features = ["serde"] }
+void = "1.0.2"
