--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ categories = ["development-tools", "parsing", "web-programming"]
 
 [dependencies]
 log = "0.4"
+regex = "1.3.1"
+lazy_static = "1.4.0"
+serde_json = "1.0"
 semver = {version = "0.9.0", features = ["serde"] }
 serde =  { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 url = {version = "2.1.0", features = ["serde"] }
